<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_AS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:textAlignment="center"
        android:theme="?attr/actionBarTheme"
        app:title="About Section"
        app:titleTextColor="@color/white" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_AS"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="106dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="256dp">

        <TableRow
            android:id="@+id/Entry_1"
            android:layout_width="128dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/Name_1"
                android:layout_width="170.5dp"
                android:layout_height="wrap_content"
                android:text="@string/Student_Name_0"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/ID_1"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/Student_ID_0"
                android:textAlignment="center" />

        </TableRow>

        <TableRow
            android:id="@+id/Entry_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/Name_2"
                android:layout_width="170.5dp"
                android:layout_height="wrap_content"
                android:text="@string/Student_Name_1"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/ID_2"
                android:layout_width="170.5dp"
                android:layout_height="wrap_content"
                android:text="@string/Student_ID_1"
                android:textAlignment="center" />

        </TableRow>

        <TableRow
            android:id="@+id/Entry_3"
            android:layout_width="170.5dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/Name_3"
                android:layout_width="170.5dp"
                android:layout_height="wrap_content"
                android:text="@string/Student_Name_2"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/ID_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Student_ID_2"
                android:textAlignment="center" />

        </TableRow>

        <TableRow
            android:id="@+id/Entry_4"
            android:layout_width="170.5dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/Name_4"
                android:layout_width="170.5dp"
                android:layout_height="wrap_content"
                android:text="@string/Student_Name_3"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/ID_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Student_ID_3"
                android:textAlignment="center" />

        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/Column_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_AS"
        android:layout_alignParentStart="true"
        android:layout_marginStart="93dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="16dp"
        android:text="Name"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/Column_ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_AS"
        android:layout_marginStart="280dp"
        android:layout_marginTop="70dp"
        android:text="ID"
        android:textAlignment="center" />

</RelativeLayout>